force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Classifies the account as a broker firm or an investing entity. Drives record type and IR layout/field exposure.</description>
    <inlineHelpText>Select Investing Entity for investor LP entities; Broker Firm for brokerage relationships.</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker Firm</fullName>
            </value>
            <value>
                <fullName>Investing Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>