force-app/main/default/objects/Account/fields/Bank_Account_Last4__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Last4__c</fullName>
    <description>Last four digits of the entity&apos;s linked bank account, used for reconciliation reference. Sensitive; Phase C usage.</description>
    <inlineHelpText>Enter the last four digits of the linked bank account for reconciliation reference only.</inlineHelpText>
    <label>Bank Account Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>