force-app/main/default/objects/Account/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>Legal structure of the investing entity, used for tax reporting and signature requirements.</description>
    <inlineHelpText>Select the legal structure of this investing entity (e.g., LLC, Trust, LP, IRA).</inlineHelpText>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>Corp</fullName>
            </value>
            <value>
                <fullName>IRA</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>