force-app/main/default/objects/Account/fields/Plaid_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Plaid_Access_Token__c</fullName>
    <description>System-only Plaid access token for the entity&apos;s linked bank account. Not exposed on any page layout and granted to no permission set; accessed by Apex in system context only (Phase C).</description>
    <inlineHelpText>System field. Managed by integration code only; do not edit manually.</inlineHelpText>
    <label>Plaid Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>