force-app/main/default/objects/Account/fields/Tax_ID_EIN__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_EIN__c</fullName>
    <description>Sensitive employer identification number for the investing entity. Access restricted via field-level security; surfaced to most users only through the masked formula field.</description>
    <inlineHelpText>Enter the entity EIN (format ##-#######). Restricted field — visible only to authorized roles.</inlineHelpText>
    <label>Tax ID / EIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>