force-app/main/default/objects/Account/fields/Tax_ID_Masked__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Masked__c</fullName>
    <description>Read-only masked rendering of the entity Tax ID / EIN, showing only the last four digits. Safe to display on layouts for all roles.</description>
    <formula>&apos;**-***&apos; &amp; RIGHT(Tax_ID_EIN__c, 4)</formula>
    <inlineHelpText>Displays the last four digits of the Tax ID / EIN. The full value is stored on the restricted Tax ID / EIN field.</inlineHelpText>
    <label>Tax ID (Masked)</label>
    <type>Text</type>
</CustomField>