force-app/main/default/objects/Account/recordTypes/Broker_Firm.recordType-meta.xml
<RecordType>
    <fullName>Broker_Firm</fullName>
    <active>true</active>
    <description>Record type for broker and brokerage firm relationships. Drives the simplified Broker Firm page layout which omits investor-specific fields like Entity Type and Tax ID.</description>
    <label>Broker Firm</label>
</RecordType>