force-app/main/default/objects/Account/recordTypes/Investing_Entity.recordType-meta.xml
<RecordType>
    <fullName>Investing_Entity</fullName>
    <active>true</active>
    <description>Record type for investor LP entities (Trusts, LLCs, IRAs, Individuals, Corporations). Drives the Investing Entity page layout with entity type, tax ID, bank details, and IR compliance fields.</description>
    <label>Investing Entity</label>
</RecordType>