force-app/main/default/objects/Account/validationRules/Investing_Entity_Requires_Entity_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Investing_Entity_Requires_Entity_Type</fullName>
    <active>true</active>
    <description>Requires Entity Type to be populated when Account Type is Investing Entity. Broker Firm accounts are exempt. Factory-safe: only fires when Account_Type__c is explicitly set to Investing Entity.</description>
    <errorConditionFormula>AND(ISPICKVAL(Account_Type__c,&apos;Investing Entity&apos;), ISBLANK(TEXT(Entity_Type__c)))</errorConditionFormula>
    <errorMessage>Entity Type is required for Investing Entity accounts.</errorMessage>
</ValidationRule>